[styles][fix] -fixed overflow for filters

--- a/src/pages/ProductListing/product-listing.css
+++ b/src/pages/ProductListing/product-listing.css
@@ -1,3 +1,7 @@
+/*root*/
+#root {
+  overflow-x: hidden;
+}
 /*filter aside*/
 .mobile-filter {
   display: none;
